--- a/style/style.css
+++ b/style/style.css
@@ -1,13 +1,25 @@
 @font-face {
     font-family: 'TT Lakes';
     font-weight: bold;
-    src: url(../fonts/TTLakes-Bold.woff);
+    src: url(../fonts/TTLakes-Bold.woff),
+        url(../fonts/TTLakes-Bold.eot),
+        url(../fonts/TTLakes-Bold.ttf);
 }
 
 @font-face {
     font-family: 'TT Lakes';
     font-weight: medium;
-    src: url(../fonts/TTLakes-Medium.woff);
+    src: url(../fonts/TTLakes-Medium.woff),
+        url(../fonts/TTLakes-Medium.ttf),
+        url(../fonts/TTLakes-Medium.eot);
+}
+
+@font-face {
+    font-family: 'TT Lakes';
+    font-weight: normal;
+    src: url(../fonts/TTLakes-Regular.woff),
+        url(../fonts/TTLakes-Regular.eot),
+        url(../fonts/TTLakes-Regular.ttf);
 }
 
 * {
@@ -28,12 +40,6 @@
     .info__navigation {
         margin-left: 16px;
         overflow-x: scroll;
-    }
-
-    .description__text {
-        overflow: hidden;
-        height: 92px;
-        margin-top: 0;
     }
 
     .feedback-button {
@@ -59,6 +65,13 @@
     .info__title {
         padding-left: 16px;
     }
+
+    .description__wrapper {
+        position: relative;
+        max-height: 90px;
+        overflow-y: hidden;
+    }
+
 }
 
 @media (min-width:769px) {
@@ -67,8 +80,12 @@
     }
 
     .image {
-        border: 0px solid;
         border-radius: 3%;
+    }
+
+    .desktop-image {
+        flex-shrink: 0;
+        width: 50%;
     }
 
     main {
@@ -78,23 +95,22 @@
         padding: 0 24px 24px 24px;
     }
 
+    .description__wrapper {
+        max-height: 160px;
+        width: 312px;
+        overflow-y: hidden;
+    }
+
+    .description__wrapper>p {
+        line-height: 20px;        
+    }
+
+    .description__wrapper>p:first-child {
+        margin-bottom: 20px;
+    }
+
     .info__navigation {
         margin-left: 24px;
-    }
-
-    .description {
-        flex: 50%
-    }
-
-    .image {
-        flex: 50%;
-
-    }
-
-    .description__text {
-        overflow: hidden;
-        width: 312px;
-        height: 150px;
     }
 
     .feedback-button {
@@ -140,16 +156,6 @@
     main {
         padding: 0 32px 32px 32px;
         margin-top: 12px;
-    }
-
-    .description__text {
-        overflow: visible;
-        width: 490px;
-    }
-
-    .description {
-        display: flex;
-        flex-direction: column;
     }
 
     .feedback-button {
@@ -203,8 +209,14 @@
         padding-left: 0.5em;
     }
 
+    .description__wrapper {
+        max-height: 160px;
+        width: 490px;
+        overflow-y: hidden;
+    }
+
     .info__title-line {
-        top: 28px;
+        top: 23px;
     }
 }
 
@@ -212,7 +224,9 @@ body {
     background: #fff;
     display: flex;
     flex-direction: column;
+    margin: 0 auto;
 }
+
 
 .info {
     padding-right: 24px;
@@ -291,18 +305,17 @@ body {
     border: 2px solid #88FFEC;
 }
 
-
-
 .description__text {
+    margin: 0;
     font-size: 14px;
     letter-spacing: 0.2px;
     color: #1B1C21;
+    line-height: 18px;
 }
 
 .text-expander {
-    left: 10px;
+    margin-top: 16px;
     position: relative;
-    padding-top: 0.5em;
     font-weight: 600;
     color: #1B1C21;
     font-size: 16px;
@@ -313,19 +326,159 @@ body {
 
 .text-expander::before {
     content: url(../icons/expand.svg);
-    position: absolute;
-    left: -20px;
+    width: 24px;
+    height: 24px;
+    vertical-align: middle;
 }
 
 .text-expander:focus {
-    padding: 0.5em;
     border-radius: 6px;
     border: 2px solid #88FFEC;
-    margin: -0.1em 0 0 -4px;
+    margin-top: 14px;
+    margin-left: -2px;
 }
 
-.description__expander {
+/* ASIDE */
+
+.aside-menu {
     display: flex;
-    justify-content: flex-start;
-    margin-bottom: 5%;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 320px;
+    box-shadow:
+        5px 5px 30px 10px rgba(87, 85, 109, 0.2);
+    position: fixed;
+    background-color: #fff;
+    padding: 0 24px;
+    height: 100%;
+}
+
+.buttons,
+.icon>a {
+    background-color: #fff;
+    width: 40px;
+    height: 40px;
+    border: none;
+    background-repeat: no-repeat;
+}
+
+.button-burger {
+    background-image: url(../icons/burger.svg);
+}
+
+.button-search {
+    background-image: url(../icons/search.svg);
+}
+
+.aside-menu__logo {
+    position: absolute;
+    left: 60px;
+}
+
+.aside-menu__top-header {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 24px 0 32px 0;
+}
+
+.aside-menu__navigation-menu__list {
+    list-style: none;
+}
+
+.footer__navigation-icons ul li {
+    display: inline-block;
+    list-style: none;
+}
+
+ul {
+    padding: 0;
+}
+
+.icon a {
+    margin: 0 16px 0 0;
+    display: block;
+}
+
+.icon-profile a {
+    background-image: url(../icons/profile.svg);
+}
+
+.icon-chat a {
+    background-image: url(../icons/chat.svg);
+}
+
+.icon-phone a {
+    background-image: url(../icons/call.svg);
+}
+
+.aside-menu__navigation-menu__list li a {
+    text-decoration: none;
+    color: #7E7E82;
+}
+
+.aside-menu__navigation-menu__list li {
+    margin-bottom: 32px;
+    position: relative;
+}
+
+.aside-menu__footer {
+    margin-bottom: 32px;
+}
+
+.footer-phone {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.footer__language-select li {
+    list-style: none;
+    display: inline;
+}
+
+.footer__navigation {
+    margin-bottom: 40px;
+}
+
+.footer__language-select input[type="radio"] {
+    visibility: hidden;
+    position: absolute;
+}
+
+.aside-menu__navigation-menu__list li a:focus::before {
+    content: url(../icons/highlight.svg);
+    position: absolute;
+    left: -24px;
+    top: -4px;
+}
+
+.aside-menu li a:focus,
+.footer__language-select li:focus {
+    color: #7E7E82;
+}
+
+.footer__language-select input:checked+label {
+    color: #7E7E82;
+}
+
+.footer__language-select>label {
+    margin-right: 7px;
+    transition: all 0.3s;
+}
+
+.buttons,
+.icon {
+    opacity: 1;
+    transition: all 0.3s;
+}
+
+.buttons:hover,
+.icon:hover {
+    transform: scale(1.2);
+    opacity: 0.8;
+}
+
+.footer__language-select label:hover {
+    cursor: pointer;
 }
