--- a/style/style.css
+++ b/style/style.css
@@ -102,7 +102,7 @@
     }
 
     .description__wrapper>p {
-        line-height: 20px;        
+        line-height: 20px;
     }
 
     .description__wrapper>p:first-child {
@@ -174,6 +174,23 @@
     .header-navigation__buttons__desktop {
         visibility: visible;
         position: relative;
+        gap: 10px;
+    }
+
+    .header-navigation__buttons__desktop>button {
+        background-repeat: no-repeat;
+        height: 40px;
+        width: 40px;
+    }
+
+    .header-navigation__buttons__desktop .repair {
+        background-image: url(../icons/repair.svg);
+        margin: 0 10px;
+    }
+
+    .header-navigation__buttons__desktop .checkStatus {
+        background-image: url(../icons/search.svg);
+        margin: 0 10px;
     }
 
     .info__title {
